--- a/homepage_test/index.html
+++ b/homepage_test/index.html
@@ -2,40 +2,52 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>현재 위치의 날씨 정보</title>
+    <title>날씨 정보 조회</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         h1 { color: #333; }
         .weather-info { margin-top: 20px; }
         .error { color: red; }
+        .search-form { margin-bottom: 20px; }
     </style>
 </head>
 <body>
-    <h1>현재 위치의 날씨 정보</h1>
+    <h1>날씨 정보 조회</h1>
+    <div class="search-form">
+        <input type="text" id="city-input" placeholder="도시 이름을 입력하세요" />
+        <button id="search-button">검색</button>
+    </div>
     <div class="weather-info" id="weather-info">
-        로딩 중입니다...
+        날씨 정보를 입력하신 후 검색하세요.
     </div>
 
     <script>
-        async function fetchWeatherData() {
-            try {
-                // 클라이언트의 공인 IP 주소 가져오기
-                const ipResponse = await fetch('https://api.ipify.org?format=json');
-                const ipData = await ipResponse.json();
-                const clientIP = ipData.ip;
+        document.getElementById('search-button').addEventListener('click', fetchWeatherData);
 
-                // 서버에 공인 IP 주소를 포함하여 요청 보내기
-                const response = await fetch(`/weather?ip=${clientIP}`);
+        async function fetchWeatherData() {
+            const cityName = document.getElementById('city-input').value.trim();
+            if (!cityName) {
+                alert('도시 이름을 입력하세요.');
+                return;
+            }
+
+            try {
+                // 서버에 도시 이름을 포함하여 요청 보내기
+                const response = await fetch(`/weather?city=${encodeURIComponent(cityName)}`);
+                if (!response.ok) {
+                    throw new Error(`서버 응답 상태 코드: ${response.status}`);
+                }
                 const data = await response.json();
 
                 if (data.error) {
+                    console.error('서버 오류:', data.error);
                     document.getElementById('weather-info').innerHTML = `<p class="error">${data.error}</p>`;
                 } else {
                     displayWeatherData(data);
                 }
             } catch (error) {
-                console.error('데이터를 가져오는 중 오류 발생:', error);
-                document.getElementById('weather-info').innerHTML = `<p class="error">데이터를 가져오는 데 실패했습니다.</p>`;
+                console.error('날씨 데이터를 가져오는 중 오류 발생:', error);
+                document.getElementById('weather-info').innerHTML = `<p class="error">날씨 데이터를 가져오는 데 실패했습니다.</p>`;
             }
         }
 
@@ -45,15 +57,12 @@
             const weather = data.weather;
 
             weatherInfoDiv.innerHTML = `
-                <h2>${location.city}, ${location.region}, ${location.country}</h2>
+                <h2>${location.city}, ${location.country}</h2>
                 <p>기온: ${weather.temperature}°C</p>
                 <p>날씨: ${weather.description}</p>
                 <p>습도: ${weather.humidity}%</p>
             `;
         }
-
-        // 페이지 로드 시 날씨 데이터 가져오기
-        fetchWeatherData();
     </script>
 </body>
 </html>
