--- a/homepage_test/index.html
+++ b/homepage_test/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>날씨 정보 조회</title>
+    <title>현재 위치 날씨 정보 조회</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         h1 { color: #333; }
@@ -12,39 +12,50 @@
     </style>
 </head>
 <body>
-    <h1>날씨 정보 조회</h1>
+    <h1>현재 위치 날씨 정보 조회</h1>
     <div class="search-form">
-        <input type="text" id="city-input" placeholder="도시 이름을 입력하세요" />
-        <button id="search-button">검색</button>
+        <button id="fetch-location-button">내 위치로 날씨 조회</button>
     </div>
     <div class="weather-info" id="weather-info">
-        날씨 정보를 입력하신 후 검색하세요.
+        날씨 정보를 조회하려면 버튼을 클릭하세요.
     </div>
 
     <script>
-        document.getElementById('search-button').addEventListener('click', fetchWeatherData);
+        document.getElementById('fetch-location-button').addEventListener('click', requestLocation);
 
-        async function fetchWeatherData() {
-            const cityName = document.getElementById('city-input').value.trim();
-            if (!cityName) {
-                alert('도시 이름을 입력하세요.');
+        function requestLocation() {
+            if (!navigator.geolocation) {
+                alert('이 브라우저는 Geolocation API를 지원하지 않습니다.');
                 return;
             }
 
+            // 위치 권한 요청
+            navigator.geolocation.getCurrentPosition(
+                (position) => {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
+                    fetchWeatherData(latitude, longitude);
+                },
+                (error) => {
+                    handleGeolocationError(error);
+                }
+            );
+        }
+
+        function handleGeolocationError(error) {
+            console.error('위치 정보 오류:', error);
+            document.getElementById('weather-info').innerHTML = `<p class="error">위치 권한이 필요합니다. 브라우저 설정에서 권한을 허용해주세요.</p>`;
+        }
+
+        async function fetchWeatherData(latitude, longitude) {
             try {
-                // 서버에 도시 이름을 포함하여 요청 보내기
-                const response = await fetch(`/weather?city=${encodeURIComponent(cityName)}`);
+                // 서버에 위도와 경도를 포함하여 요청 보내기 (상대 경로 사용)
+                const response = await fetch(`/api/weather?lat=${latitude}&lon=${longitude}`);
                 if (!response.ok) {
                     throw new Error(`서버 응답 상태 코드: ${response.status}`);
                 }
                 const data = await response.json();
-
-                if (data.error) {
-                    console.error('서버 오류:', data.error);
-                    document.getElementById('weather-info').innerHTML = `<p class="error">${data.error}</p>`;
-                } else {
-                    displayWeatherData(data);
-                }
+                displayWeatherData(data);
             } catch (error) {
                 console.error('날씨 데이터를 가져오는 중 오류 발생:', error);
                 document.getElementById('weather-info').innerHTML = `<p class="error">날씨 데이터를 가져오는 데 실패했습니다.</p>`;
@@ -53,14 +64,14 @@
 
         function displayWeatherData(data) {
             const weatherInfoDiv = document.getElementById('weather-info');
-            const location = data.location;
-            const weather = data.weather;
+            const location = data.name; // 도시 이름
+            const country = data.sys.country; // 국가 코드
 
             weatherInfoDiv.innerHTML = `
-                <h2>${location.city}, ${location.country}</h2>
-                <p>기온: ${weather.temperature}°C</p>
-                <p>날씨: ${weather.description}</p>
-                <p>습도: ${weather.humidity}%</p>
+                <h2>${location}, ${country}</h2>
+                <p>기온: ${data.main.temp}°C</p>
+                <p>날씨: ${data.weather[0].description}</p>
+                <p>습도: ${data.main.humidity}%</p>
             `;
         }
     </script>
