--- a/homepage_test/index.html
+++ b/homepage_test/index.html
@@ -59,7 +59,7 @@
             weatherInfoDiv.innerHTML = `
                 <h2>${location.city}, ${location.country}</h2>
                 <p>기온: ${weather.temperature}°C</p>
-                <p>날씨: ${weather.description}</p>
+                <!--<p>날씨: ${weather.description}</p>--> <!-- 발효에 필요할 정보는 아닌 것 같지만 혹시라도 쓸 지 모르니 주석처리만 해놓고 남겨둠 -->
                 <p>습도: ${weather.humidity}%</p>
             `;
         }
